Change Jenkinsfile and kubernetes manifest

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -51,7 +51,7 @@ spec:
     spec:
       containers:
         - name: web
-          image: arduinni/kube-news:latest
+          image: arduinni/kube-news:{{TAG}}
           ports:
             - containerPort: 8080
           env:
